--- a/doczek.css
+++ b/doczek.css
@@ -1,11 +1,11 @@
-.controller.xbox {	
-    background: url(https://thedoczek.github.io/blu.svg) !important;
+.controller.xbox#gamepad-0 {	
+    background-image: url(https://thedoczek.github.io/blu.svg) !important;
 } 
 
-.xbox .button {
-    background: url(https://thedoczek.github.io/bluabxy.svg) !important;
+.xbox#gamepad-0 .button {
+    background-image: url(https://thedoczek.github.io/bluabxy.svg) !important;
 }
 
-.xbox .stick {
-    background: url(https://thedoczek.github.io/blustick.svg) !important;
+.xbox#gamepad-0 .stick {
+    background-image: url(https://thedoczek.github.io/blustick.svg) !important;
 }
