--- a/doczek.css
+++ b/doczek.css
@@ -1,3 +1,5 @@
+/* PLAYER 1 */
+
 .controller.xbox#gamepad-0 {	
     background-image: url(https://thedoczek.github.io/blu.svg) !important;
 } 
@@ -10,6 +12,8 @@
     background-image: url(https://thedoczek.github.io/blustick.svg) !important;
 }
 
+/* PLAYER 2 */
+
 .controller.xbox#gamepad-1 {	
     background-image: url(https://thedoczek.github.io/gren.svg) !important;
 } 
@@ -20,4 +24,26 @@
 
 .xbox#gamepad-1 .stick {
     background-image: url(https://thedoczek.github.io/grenstick.svg) !important;
+}
+
+/* YOKU'S ISLAND EXPRESS */
+
+.controller.xbox#gamepad-0 {	
+    background-image: url(https://thedoczek.github.io/blu.svg) !important;
+} 
+
+.xbox#gamepad-0 .button {
+    background-image: url(https://thedoczek.github.io/bluabxy.svg) !important;
+}
+
+.xbox#gamepad-0 .stick {
+    background-image: url(https://thedoczek.github.io/blustick.svg) !important;
+}
+
+.xbox#gamepad-0 .trigger.left {
+    background-image: url(https://thedoczek.github.io/bluetrigger.svg) !important;
+}
+
+.xbox#gamepad-1 .trigger.right {
+    background-image: url(https://thedoczek.github.io/yellowtrigger.svg) !important;
 }
