--- a/doczek.css
+++ b/doczek.css
@@ -5,11 +5,11 @@
 } 
 
 .xbox#gamepad-0 .button {
-    background-image: url(https://thedoczek.github.io/bluabxy.svg) !important;
+    background-image: url(https://thedoczek.github.io/abxy.svg) !important;
 }
 
 .xbox#gamepad-0 .stick {
-    background-image: url(https://thedoczek.github.io/blustick.svg) !important;
+    background-image: url(https://thedoczek.github.io/grenstick.svg) !important;
 }
 
 /* PLAYER 2 */
@@ -19,9 +19,9 @@
 } 
 
 .xbox#gamepad-1 .button {
-    background-image: url(https://thedoczek.github.io/grenabxy.svg) !important;
+    background-image: url(https://thedoczek.github.io/abxy.svg) !important;
 }
 
 .xbox#gamepad-1 .stick {
-    background-image: url(https://thedoczek.github.io/grenstick.svg) !important;
+    background-image: url(https://thedoczek.github.io/blustick.svg) !important;
 }
