--- a/superhot.css
+++ b/superhot.css
@@ -5,7 +5,7 @@
 } 
 
 .xbox#gamepad-0 .button {
-    background-image: url(https://thedoczek.github.io/superhotabxy.svg) !important;
+    background-image: url(https://thedoczek.github.io/abxy.svg) !important;
 }
 
 .xbox#gamepad-0 .stick {
