--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,12 @@ utw {
   font-size: 1.375rem;
 }
 
+utw6 {
+  font-weight: 600;
+  font-style: italic;
+  font-size: 1.375rem;
+}
+
 wyd {
   font-weight: 300;
   font-style: italic;
